# cryptdb

proxy-src/: CMakeLists.txt  INSTALL  Makefile.am  NEWS  autogen.sh  big_configure.in  little_configure.in
proxy-src/.bzr/branch/: branch.conf  last-revision  tags
proxy-src/.bzr/checkout/: dirstate
proxy-src/.bzr/repository/: pack-names
proxy-src/doc/: Makefile.am
proxy-src/doc/reference/: Makefile.am
proxy-src/internal/: filesgpl2
proxy-src/plugins/admin/: admin-plugin.c
proxy-src/plugins/cli/: cli-plugin.c
proxy-src/plugins/debug/: debug-plugin.c
proxy-src/plugins/master/: master-plugin.c
proxy-src/plugins/proxy/: proxy-plugin.c
proxy-src/plugins/replicant/: replicant-plugin.c
proxy-src/src/: CMakeLists.txt  Makefile.am  chassis-event-thread.c  chassis-filemode.c  chassis-frontend.c  chassis-gtimeval.c  chassis-keyfile.c  chassis-limits.c  chassis-log-config.c  chassis-log.c  chassis-mainloop.c  chassis-options.c  chassis-path.c  chassis-plugin.c  chassis-shutdown-hooks.c  chassis-stats-private.h  chassis-stats.c  chassis-timings.c  chassis-unix-daemon.c  chassis-win32-service.c  chassis_log_backend.c  chassis_log_domain.c  chassis_log_error.c  glib-ext-ref.c  glib-ext.c  lua-env.c  lua-load-factory.c  lua-scope.c  mysql-binlog-dump.c  mysql-myisam-dump.c  mysql-proxy-cli.c  network-address-lua.c  network-address.c  network-asn1.c  network-backend-lua.c  network-backend.c  network-conn-pool-lua.c  network-conn-pool.c  network-debug.h  network-injection-lua.c  (+19 more)
proxy-src/tests/unit/: CMakeLists.txt  Makefile.am
scripts/: install.rb
(+3 files in other folders)
